Fix T37264: cycles CPU render had limited number of float images, bumped to 1024.

GPU is still limited to 5, but there's no good reason for the CPU to be limited.